src/objects/App_Exc_HTML_Tag_Replacement_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for Rich Text to Plain Text conversion</description>
    <fields>
        <fullName>App_Exc_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>App_Exc_ReplaceWith__c</fullName>
        <label>ReplaceWith</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Exc_ReplacedTag__c</fullName>
        <label>ReplacedTag</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>AppExc_HTML Tag Replacement Map</label>
</CustomObject>